# CCT

./: .gitignore  Cargo.toml  delet_macos_file.sh  index.html  package-lock.json  package.json  run.sh  tsconfig.json  vite.config.ts  需求规范.md
.cargo/: config.toml
.github/workflows/: agent-release.yml  ci.yml  release.yml
crates/cct-agent/: Cargo.toml
crates/cct-agent/src/: main.rs
crates/cct-core/: Cargo.toml  build.rs
crates/cct-core/cpp/include/: bridge.h
crates/cct-core/cpp/src/: bridge.cpp
crates/cct-core/src/: config.rs  error.rs  lib.rs
crates/cct-core/src/analysis/: custom_rules.rs  linux_kernel.rs  mod.rs  openharmony.rs
crates/cct-core/src/indexer/: database.rs  file_scanner.rs  mod.rs
crates/cct-core/src/models/: graph.rs  mod.rs  project.rs  relation.rs  symbol.rs
crates/cct-core/src/parser/: clang_bridge.rs  incremental.rs  mod.rs  scheduler.rs
crates/cct-core/src/query/: call_query.rs  include_query.rs  mod.rs  path_finder.rs  reference_query.rs  symbol_search.rs
crates/cct-core/tests/: test_database.rs  test_file_scanner.rs  test_models.rs  test_query.rs
crates/cct-ssh/: Cargo.toml
crates/cct-ssh/src/: agent_client.rs  connection.rs  lib.rs  sftp.rs
doc/: 00-文档索引.md  01-项目管理模块需求.md  02-源码解析与索引模块需求.md  03-查询与检索模块需求.md  04-可视化分析模块需求.md  05-代码编辑器集成模块需求.md  06-专用分析功能模块需求.md  07-AI智能助手模块需求.md  08-非功能需求.md  09-技术架构概要设计.md
docs/: BUILD.md
scripts/: fix-windows-icon.py
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/ai/: context.rs  conversation.rs  llm_client.rs  mod.rs  skills.rs
src-tauri/src/ai/mcp/: client.rs  mod.rs  server.rs
src-tauri/src/commands/: ai.rs  analysis.rs  editor.rs  graph.rs  mod.rs  parse.rs  project.rs  query.rs  remote.rs
src-tauri/src/services/: project_service.rs
src/api/: ai.ts  editor.ts  graph.ts  project.ts  query.ts  types.ts
src/components/ai/: AiConfigPanel.vue  AiPanel.vue  ChatMessage.vue
src/components/editor/: CallGraphPanel.vue  CodeEditor.vue  CodeEditorPanel.vue  DockviewEditor.vue  EditorTabs.vue  SplitEditor.vue
src/components/graph/: CallGraphTab.vue  CallGraphView.vue  GraphRenderer.vue
src/components/layout/: MainLayout.vue  Sidebar.vue  StatusBar.vue  Toolbar.vue
src/components/project/: CreateProjectDialog.vue  FileTree.vue  ProjectSettingsDialog.vue  RemoteProjectWizard.vue  SshStatusIndicator.vue
src/components/search/: GlobalSearch.vue  ResultPanel.vue
src/components/settings/: SettingsDialog.vue
src/components/terminal/: TerminalPanel.vue
src/components/welcome/: WelcomeScreen.vue
src/composables/: useKeyboardShortcuts.ts  useTauriCommand.ts  useTauriEvent.ts  useTheme.ts  useWindowTitle.ts
src/i18n/: en-US.json  index.ts  zh-CN.json
src/router/: index.ts
src/stores/: ai.ts  editor.ts  graph.ts  project.ts  settings.ts
src/styles/: global.css
src/views/: AnalysisView.vue  CustomRulesView.vue  EditorView.vue  GraphView.vue  IpcAnalysisView.vue  KernelAnalysisView.vue  ProjectView.vue  SettingsView.vue
