[package]
name = "cct-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
cct-core = { path = "../crates/cct-core" }
cct-ssh = { path = "../crates/cct-ssh" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow.workspace = true
tokio.workspace = true
dirs = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
