[package]
name = "cct-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs = "6"
rusqlite = { version = "0.33", features = ["bundled"] }
rayon = "1"
sha2 = "0.10"
walkdir = "2"
