[package]
name = "cct-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs = "6"
rusqlite = { version = "0.33", features = ["bundled"] }
rayon = "1"
regex = "1"
serde_yaml = "0.9"
sha2 = "0.10"
walkdir = "2"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
