[package]
name = "cct-ssh"
version.workspace = true
edition.workspace = true

[dependencies]
cct-core = { path = "../cct-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait = "0.1"
futures = "0.3"
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2"
